Publish writer terminal release results